add documentation to create task endpoint
